styles/globals.css
html,
body {
  padding: 0;
  margin: 0;
  font-family: Roboto, sans-serif;
  background-color: #F7F7F7;
  color: #112229;
  scroll-behavior: smooth;
}

a {
  color: inherit;
  text-decoration: none;
}

* {
  box-sizing: border-box;
}

